--- a/StorhaugenWebsite/Pages/CollectionDetails.razor
+++ b/StorhaugenWebsite/Pages/CollectionDetails.razor
@@ -46,7 +46,7 @@ else
             </div>
             <div class="flex-grow-1">
                 <div class="d-flex align-center gap-2">
-                    <h1 class="page-title" style="margin: 0;">@_collection.Name</h1>
+                    <h1 class="page-title">@_collection.Name</h1>
                     @if (_collection.IsOwner)
                     {
                         <MudIconButton Icon="@Icons.Material.Rounded.Edit"
