--- a/StorhaugenWebsite/Pages/CookBook.razor
+++ b/StorhaugenWebsite/Pages/CookBook.razor
@@ -178,7 +178,7 @@
 
                                         <div class="d-flex align-center gap-1">
                                             <MudIcon Icon="@Icons.Material.Rounded.Person" Size="Size.Small" Color="Color.Default" />
-                                            <MudText Typo="Typo.caption" Color="Color.Secondary" Class="text-truncate" Style="font-size:0.7rem;">
+                                            <MudText Typo="Typo.caption" Color="Color.Secondary" Class="card-subtitle text-truncate">
                                                 @(recipe.UserDisplayName == AuthService.CurrentUserName ? "Meg" : recipe.UserDisplayName)
                                             </MudText>
                                         </div>
