--- a/StorhaugenWebsite/Pages/SharedCollectionView.razor
+++ b/StorhaugenWebsite/Pages/SharedCollectionView.razor
@@ -44,7 +44,7 @@ else
             </div>
 
             <div class="flex-grow-1">
-                <h1 class="page-title" style="margin: 0;">@_collection.Name</h1>
+                <h1 class="page-title">@_collection.Name</h1>
 
                 @if (!string.IsNullOrEmpty(_collection.Description))
                 {
