--- a/StorhaugenWebsite/Pages/Friends.razor
+++ b/StorhaugenWebsite/Pages/Friends.razor
@@ -18,10 +18,10 @@
 <div class="friends-container">
     @* --- HEADER --- *@
     <div class="d-flex justify-space-between align-center mb-4">
-        <MudText Typo="Typo.h4" Style="font-family: 'Fraunces', serif;">Venner</MudText>
+        <h1 class="page-title">Venner</h1>
         @if (_friends.Any())
         {
-            <MudText Typo="Typo.caption" Color="Color.Secondary">@_friends.Count venner</MudText>
+            <p class="page-subtitle">@_friends.Count venner</p>
         }
     </div>
 
@@ -68,7 +68,7 @@
                                     </MudAvatar>
                                     <div class="flex-grow-1">
                                         <MudText Typo="Typo.body1" Style="font-weight: 600;">@user.DisplayName</MudText>
-                                        <MudText Typo="Typo.caption" Color="Color.Secondary">ID: @user.ShareId</MudText>
+                                        <MudText Typo="Typo.caption" Color="Color.Secondary" Class="card-subtitle">ID: @user.ShareId</MudText>
                                     </div>
 
                                     @if (user.FriendshipStatus == "friends")
@@ -131,7 +131,7 @@
                                     </MudAvatar>
                                     <div class="flex-grow-1">
                                         <MudText Typo="Typo.body2" Style="font-weight: 600;">@request.FriendDisplayName</MudText>
-                                        <MudText Typo="Typo.caption" Color="Color.Secondary">Vil bli venn med deg</MudText>
+                                        <MudText Typo="Typo.caption" Color="Color.Secondary" Class="card-subtitle">Vil bli venn med deg</MudText>
                                     </div>
                                 </div>
                                 <div class="d-flex gap-2 mt-3">
@@ -165,7 +165,7 @@
                                     </MudAvatar>
                                     <div class="flex-grow-1">
                                         <MudText Typo="Typo.body1" Style="font-weight: 600;">@friend.FriendDisplayName</MudText>
-                                        <MudText Typo="Typo.caption" Color="Color.Secondary">
+                                        <MudText Typo="Typo.caption" Color="Color.Secondary" Class="card-subtitle">
                                             @friend.RecipeCount oppskrifter
                                         </MudText>
                                     </div>
@@ -209,7 +209,7 @@
                                         </MudAvatar>
                                         <div class="flex-grow-1">
                                             <MudText Typo="Typo.body2">@request.FriendDisplayName</MudText>
-                                            <MudText Typo="Typo.caption" Color="Color.Secondary">Venter...</MudText>
+                                            <MudText Typo="Typo.caption" Color="Color.Secondary" Class="card-subtitle">Venter...</MudText>
                                         </div>
                                         <MudIconButton Icon="@Icons.Material.Rounded.Close" Size="Size.Small" OnClick="@(() => CancelRequest(request))" />
                                     </div>
