--- a/StorhaugenWebsite/Pages/Browse.razor
+++ b/StorhaugenWebsite/Pages/Browse.razor
@@ -15,7 +15,7 @@
 @* --- Search & Filters --- *@
 <div class="d-flex flex-column gap-3 mb-4">
     <MudTextField @bind-Value="_searchQuery"
-                  Label="Søk etter oppskrifter"
+                  Placeholder="Søk etter oppskrifter"
                   Variant="Variant.Outlined"
                   Adornment="Adornment.Start"
                   AdornmentIcon="@Icons.Material.Rounded.Search"
