--- a/StorhaugenWebsite/Pages/FriendRatings.razor
+++ b/StorhaugenWebsite/Pages/FriendRatings.razor
@@ -244,7 +244,7 @@
         {
             try
             {
-                await FriendshipService.RemoveFriendAsync(friendship.FriendUserId);
+                await FriendshipService.RemoveFriendAsync(friendship.Id);
                 Snackbar.Add("Venn fjernet", Severity.Info);
                 Navigation.NavigateTo("friends");
             }
