--- a/StorhaugenWebsite/Pages/FoodDetails.razor
+++ b/StorhaugenWebsite/Pages/FoodDetails.razor
@@ -352,7 +352,7 @@ else
                     @if (_recipe.IsArchived)
                     {
                         <MudButton Variant="Variant.Outlined" Color="Color.Secondary" Disabled="true" FullWidth="true" StartIcon="@Icons.Material.Rounded.Inventory2">
-                            Allerede arkivert
+                            Arkivert
                         </MudButton>
                     }
                     else
