--- a/StorhaugenWebsite/Pages/Friends.razor
+++ b/StorhaugenWebsite/Pages/Friends.razor
@@ -86,7 +86,7 @@
                                     else
                                     {
                                         <MudIconButton Icon="@Icons.Material.Rounded.PersonAdd"
-                                                       Color="Color.Primary"
+                                                       Color="Color.Secondary"
                                                        Variant="Variant.Filled"
                                                        Size="Size.Small"
                                                        OnClick="@(() => SendFriendRequest(user))" />
