--- a/StorhaugenWebsite/wwwroot/css/Food.css
+++ b/StorhaugenWebsite/wwwroot/css/Food.css
@@ -48,6 +48,9 @@
 .empty-state {
     text-align: center;
     padding: 60px 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .empty-state-icon {
